@@ -1,5 +1,5 @@
-/* $Id: version.c.in,v 1.17 2002/10/25 16:11:20 ukai Exp $ */
-#define CURRENT_VERSION "w3m/0.3.2rc1"
+/* $Id: version.c.in,v 1.18 2002/10/25 19:59:58 ukai Exp $ */
+#define CURRENT_VERSION "w3m/0.3.2rc1+cvs"
 
 #ifndef FM_H
 char *w3m_version = CURRENT_VERSION;
